<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loginPage_topImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_400"
        android:background="@color/mainPage_top_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/login_logo1" />
    </RelativeLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true" />

    <RelativeLayout
        android:layout_marginTop="@dimen/space_40"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_80"
            android:background="@mipmap/login_page_usr"
            android:id="@+id/imageView" />

        <EditText
            android:id="@+id/login_usr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_page_usr_hint"
            android:textColor="@color/login_usr_color"
            android:background="@null"
            android:singleLine="true"
            android:maxLines="@integer/login_page_maxLines"
            android:maxLength="@integer/login_page_maxLength"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_2"
        android:layout_marginTop="@dimen/space_30"
        android:background="@color/login_gap_color" />

    <RelativeLayout
        android:layout_marginTop="@dimen/space_40"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_80"
            android:background="@mipmap/login_page_password" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/login_page_pass_hint"
            android:textColor="@color/login_pass_color"
            android:background="@null"
            android:singleLine="true"
            android:maxLines="@integer/login_page_maxLines"
            android:maxLength="@integer/login_page_maxLength"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_2"
        android:layout_marginTop="@dimen/space_30"
        android:background="@color/login_gap_color" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/security_code_bg" >

            <EditText
                android:id="@+id/et_phoneCodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="请输入右侧验证码" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_showCode"
            android:layout_width="110dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_2"
        android:layout_marginTop="@dimen/space_30"
        android:background="@color/login_gap_color" />

    <RelativeLayout
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        android:layout_marginTop="@dimen/space_60"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginRight="@dimen/space_80"
        android:background="@drawable/login_button_corners">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_page_login"
            android:textColor="@color/login_button_text_color"
            android:textSize="@dimen/space_36" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_80"
            android:textColor="@color/login_forget_color"
            android:layout_above="@+id/login_blankView"
            android:text="@string/login_page_forget_pass" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/space_80"
            android:textColor="@color/login_forget_color"
            android:layout_above="@+id/login_blankView"
            android:text="@string/login_page_register" />

        <View
            android:id="@+id/login_blankView"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/space_40"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>